--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
 <title>404 Page not found | ilhamije</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://ilhamije.id/404.html">
+<link rel="canonical" href="http://localhost:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://ilhamije.id/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://ilhamije.id/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://ilhamije.id/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://ilhamije.id/apple-touch-icon.png">
-<link rel="mask-icon" href="https://ilhamije.id/safari-pinned-tab.svg">
+<link rel="icon" href="http://localhost:1313/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://ilhamije.id/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,15 +55,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://ilhamije.id/404.html">
-  <meta property="og:site_name" content="ilhamije">
-  <meta property="og:title" content="404 Page not found">
-  <meta property="og:locale" content="en-us">
-  <meta property="og:type" content="website">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="">
-
+</noscript>
 </head>
 
 <body class="list" id="top">
@@ -81,7 +73,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://ilhamije.id/" accesskey="h" title="ilhamije (Alt + H)">ilhamije</a>
+            <a href="http://localhost:1313/" accesskey="h" title="ilhamije (Alt + H)">ilhamije</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -107,12 +99,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://ilhamije.id/cv/" title="cv">
+                <a href="http://localhost:1313/cv/" title="cv">
                     <span>cv</span>
                 </a>
             </li>
             <li>
-                <a href="https://ilhamije.id/projects/" title="projects">
+                <a href="http://localhost:1313/projects/" title="projects">
                     <span>projects</span>
                 </a>
             </li>
@@ -124,7 +116,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://ilhamije.id/">ilhamije</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">ilhamije</a></span> · 
 
     <span>
         Powered by
